Fix TestRunner to work in IntelliJ IDEA environment